--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "RocketQDiscovery",
   "version": "1.0.0",
   "description": "Projeto desenvolvido para gerenciar perguntas anônimas de usuários direcionadas ao dono da pagina.Projeto desenvolvido na semana NLW Rocketseat na missão Discover",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-        "start": "node src/server.js"
+    "start": "nodemon .",
+    "init-db": "node src/db/init.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,11 @@
   "homepage": "https://github.com/lucio-iot-dev/RocketQDiscovery#readme",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
